@@ -3,6 +3,9 @@ git-annex (3.20110625) UNRELEASED; urgency=low
   * Always ensure git-annex branch exists.
   * Modify location log parser to allow future expansion.
   * --force will cause add, etc, to operate on ignored files.
+  * Sped back up fsck, copy --from, and other commands that often
+    have to read a lot of information from the git-annex branch. Should
+    now be nearly as fast as before the branch was introduced.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 26 Jun 2011 21:01:06 -0400
 
